<resources>
    <string name="app_name">TimeCRUD</string>
    <string name="time">Time</string>
    <string name="jogador">Jogador</string>
    <string name="codigo">Codigo</string>
    <string name="nome">Nome</string>
    <string name="cidade">Cidade</string>
    <string name="id">Id</string>
    <string name="dataNasc">dataNasc</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="insert">Inserir</string>
    <string name="update">Atualizar</string>
    <string name="delete">Deletar</string>
    <string name="finOne">Buscar</string>
    <string name="findAll">Listar</string>
    <string name="inicio">App Esportivo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>