<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentTime"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeFragment">

    <EditText
        android:id="@+id/etCodigoTime"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnFindOneTime"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDeleteTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="44dp"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInsertTime" />

    <Button
        android:id="@+id/btnFindAllTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:text="@string/findAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateTime" />

    <Button
        android:id="@+id/btnFindOneTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="31dp"
        android:text="@string/finOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInsertTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="40dp"
        android:text="@string/insert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCidadeTime" />

    <Button
        android:id="@+id/btnUpdateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCidadeTime" />

    <EditText
        android:id="@+id/etCidadeTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/cidade"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeTime" />

    <EditText
        android:id="@+id/etNomeTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCodigoTime" />

    <TextView
        android:id="@+id/tvFindAllTime"
        android:layout_width="0dp"
        android:layout_height="172dp"
        android:layout_marginTop="56dp"
        android:scrollbars="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeleteTime" />
</androidx.constraintlayout.widget.ConstraintLayout>