<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentJogador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JogadorFragment">

    <EditText
        android:id="@+id/etIdJog"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnFindOneJog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnFindOneJog" />

    <Button
        android:id="@+id/btnDeleteJog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInsertJog" />

    <EditText
        android:id="@+id/etDataNascJog"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/dataNasc"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeJog" />

    <Spinner
        android:id="@+id/spTimeJog"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintEnd_toEndOf="@+id/btnUpdateJog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPesoJog" />

    <Button
        android:id="@+id/btnUpdateJog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="26dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTimeJog" />

    <Button
        android:id="@+id/btnInsertJog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:text="@string/insert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTimeJog" />

    <EditText
        android:id="@+id/etAlturaJog"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:hint="@string/altura"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascJog" />

    <EditText
        android:id="@+id/etPesoJog"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/peso"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAlturaJog" />

    <EditText
        android:id="@+id/etNomeJog"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdJog" />

    <Button
        android:id="@+id/btnFindOneJog"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="31dp"
        android:text="@string/finOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFindAllJog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        android:text="@string/findAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateJog" />

    <TextView
        android:id="@+id/tvFindAllJog"
        android:layout_width="0dp"
        android:layout_height="116dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:scrollbars="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeleteJog" />

</androidx.constraintlayout.widget.ConstraintLayout>